# dkextract

./: .gitignore  2019-11-15-week-10-results.md  2019-week-10.html  LICENSE  Pipfile  README.md  draft.py  entered.py  get_dk.py  pyproject.toml  rosters.json  setup.py  test.py  weekly-template.md  weekly.py
dkextract/: __init__.py  dkextract.py
