[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dkextract"
version = "1.48"
authors = [
  { name="Carlos Limardo", email="climardo@gmail.com" },
]
description = "A tool to get certain data from DraftKings"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/climardo/dkextract"
"Bug Tracker" = "https://github.com/climardo/dkextract/issues"